News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/SFDC_Strategy2Oppty__c.object-meta.xml
<CustomObject>
    <description>SFDC_Acct_Plan: Connector object that ties an Account Strategy to an Opportunity.</description>
    <label>Strategy2Oppty</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Strategy2Oppty ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy2Oppty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>