News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Acct_Plan__c.field-meta.xml
<CustomField>
    <fullName>Acct_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>NB: Not necessary to display on screen!!! This lookup field is used to allow the Opportunities to be linked to the overall Account Plan. NOTE: This field is also updated via a trigger when the user creates a new opty from the strategy.</inlineHelpText>
    <label>Acct Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipLabel>Associated Opportunities</relationshipLabel>
    <relationshipName>Strategy2Oppty</relationshipName>
    <type>Lookup</type>
</CustomField>