News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>Opportunity_Name__r.Amount</formula>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>