News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <formula>Opportunity_Name__r.CloseDate</formula>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>