News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Plan Strategies</relationshipLabel>
    <relationshipName>R00N60000001PRPTEA4</relationshipName>
    <type>Lookup</type>
</CustomField>