News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/SFDC_Strategy__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy</label>
    <referenceTo>SFDC_Strategy__c</referenceTo>
    <relationshipLabel>Related Opportunities</relationshipLabel>
    <relationshipName>R00N60000001PRPXEA4</relationshipName>
    <type>Lookup</type>
</CustomField>