News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>TEXT( Opportunity_Name__r.StageName)</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>