News UAT/force-app/main/default/objects/SFDC_Strategy2Oppty__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Opportunity_Name__r.Opportunity_Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>